--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   		
   		<!-- Call for stylesheets -->
 
-  		<link rel="stylesheet" media="screen and (orientation: landscape)" href="file:///Users/Kyle/Desktop/Memory%20Deluxe/Website/md_desktop.css" />
-  		<link rel="stylesheet" media="screen and (orientation: portrait)" href="file:///Users/Kyle/Desktop/Memory%20Deluxe/Website/md_mobile.css" />
+  		<link rel="stylesheet" media="screen and (orientation: landscape)" href="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/md_desktop.css" />
+  		<link rel="stylesheet" media="screen and (orientation: portrait)" href="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/md_mobile.css" />
 
 
   		<title>memory deluxe - band</title>
@@ -31,7 +31,7 @@
 		<div class="bioimage">
 			<br>
 
-		<img src="file:///Users/Kyle/Desktop/Memory%20Deluxe/Website/CoinLaundryBandPhoto.JPG" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
+		<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/CoinLaundryBandPhoto.JPG" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
 
 		<hr class="invisible" id="news">
 		<br>
@@ -54,21 +54,21 @@
 			<p id="text">
 				"VX Girlfriend" by Memory Deluxe<br>
 				<audio controls preload="metadata" style="padding: 2vh; width: 33vw;">
-					<source src="file:///Users/Kyle/Desktop/Memory%20Deluxe/Logic%20Sessions/Killing%20Spree%20Demos/Audio%20Files/VX%20girl%20friend%20whole%20project_1.wav" type="audio/mpeg">
+					<source src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/VX%20girl%20friend%20whole%20project_1.wav" type="audio/mpeg">
 					Your browser does not support this embedded audio file. Please click the icon of your preferred streaming service below.
 				</audio><br><br>
 
 				<a href="applemusiclink" target="_blank" alt="Apple Music" style="margin: 0px; text-decoration: none;">
-					<img src="file:///Users/Kyle/Desktop/Memory%20Deluxe/Website/applemusicwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/applemusicwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="spotifymusiclink" target="_blank" alt="Spotify" style="margin: 0px; text-decoration: none;">
-					<img src="file:///Users/Kyle/Desktop/Memory%20Deluxe/Website/spotifywhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/spotifywhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="youtube" target="_blank" alt="YouTube" style="margin: 0px; text-decoration: none;">
-					<img src="file:///Users/Kyle/Desktop/Memory%20Deluxe/Website/youtubewhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/youtubewhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="bandcamp" target="_blank" alt="Bandcamp" style="margin: 0px; text-decoration: none;">
-					<img src="file:///Users/Kyle/Desktop/Memory%20Deluxe/Website/bandcampwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/bandcampwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 
 
@@ -101,8 +101,7 @@
 
 			<p id="text">
 			<a href="http://instagram.com/memory_deluxe" target="_blank" title="band instagram page">instagram</a><br>
-			<a href="http://facebook.com/memory_deluxe" target="_blank" title="band facebook page">facebook</a><br>
-			<a href="http://tweeter.com/memory_deluxe" target="_blank" title="band tweeter page">tweeter</a><br></p>
+			</p>
 		</div>
 
 		<hr class="invisible" id="about">
