--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<p id="text">
 			Memory Deluxe began in 2021 as the basement project of Minneapolis musicians Aidan Nyblom and Donny Hoover. Joined by Cody Benecasa on guitar, Kyle Kimbllin on synths, and Isaac Hesse on drums, their sound is an eclectic, polished styling of pop with dark, psychedelic undertones. Drawing influence from 1980s new wave and post-punk, Memory Deluxe breathes life into an ebullient blend of affected guitars and ethereal synthesizers, with tightly metered rhythms and reverberant vocals.<br><br>
 
-			Memory Deluxe has played iconic Minneapolis venues like First Avenue's 7th Street Entry, alongside Minneapolis bands such as Jeweler, Red Daughters, and Lazy Scorsese.
+			Memory Deluxe has played iconic Minneapolis venues like First Avenue's 7th Street Entry.
 			</p>
 
 		</div>
