--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 	<head>
+
+		<base href="https://memorydeluxe.github.io/">
 		
 		<meta charset="UTF-8">
   		<meta name="description" content="Memory Deluxe - band website">
@@ -10,8 +12,8 @@
   		
   		<!-- Call for stylesheets -->
 
-  		<link rel="stylesheet" media="screen and (orientation: landscape)" href="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/md_desktop.css" />
-  		<link rel="stylesheet" media="screen and (orientation: portrait)" href="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/md_mobile.css" />
+  		<link rel="stylesheet" media="screen and (orientation: landscape)" href="assets/css/md_desktop.css" />
+  		<link rel="stylesheet" media="screen and (orientation: portrait)" href="assets/css/md_mobile.css" />
 
 
   		<title>memory deluxe - band</title>
@@ -31,7 +33,7 @@
 		<div class="bioimage">
 			<br>
 
-		<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/CoinLaundryBandPhoto.JPG" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
+		<img src="assets/images/CoinLaundryBandPhoto.JPG" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
 
 		<hr class="invisible" id="news">
 		<br>
@@ -59,16 +61,16 @@
 				</audio><br><br>
 
 				<a href="applemusiclink" target="_blank" alt="Apple Music" style="margin: 0px; text-decoration: none;">
-					<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/applemusicwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="assets/images/applemusicwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="spotifymusiclink" target="_blank" alt="Spotify" style="margin: 0px; text-decoration: none;">
-					<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/spotifywhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="assets/images/spotifywhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="youtube" target="_blank" alt="YouTube" style="margin: 0px; text-decoration: none;">
-					<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/youtubewhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="assets/images/youtubewhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="bandcamp" target="_blank" alt="Bandcamp" style="margin: 0px; text-decoration: none;">
-					<img src="https://github.com/memorydeluxe/memorydeluxe.github.io/blob/main/bandcampwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="assets/images/bandcampwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 
 
