--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   		
   		<!-- Call for stylesheets -->
 
-  		<link rel="stylesheet" media="screen and (orientation: landscape)" href="assets/css/md_desktop.css" />
-  		<link rel="stylesheet" media="screen and (orientation: portrait)" href="assets/css/md_mobile.css" />
+  		<link rel="stylesheet" media="screen and (orientation: landscape)" href="docs/assets/css/md_desktop.css" />
+  		<link rel="stylesheet" media="screen and (orientation: portrait)" href="docs/assets/css/md_mobile.css" />
 
 
   		<title>memory deluxe - band</title>
@@ -33,7 +33,7 @@
 		<div class="bioimage">
 			<br>
 
-		<img src="assets/images/CoinLaundryBandPhoto.JPG" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
+		<img src="docs/assets/images/CoinLaundryBandPhoto.JPG" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
 
 		<hr class="invisible" id="news">
 		<br>
@@ -61,16 +61,16 @@
 				</audio><br><br>
 
 				<a href="applemusiclink" target="_blank" alt="Apple Music" style="margin: 0px; text-decoration: none;">
-					<img src="assets/images/applemusicwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="docs/assets/images/applemusicwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="spotifymusiclink" target="_blank" alt="Spotify" style="margin: 0px; text-decoration: none;">
-					<img src="assets/images/spotifywhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="docs/assets/images/spotifywhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="youtube" target="_blank" alt="YouTube" style="margin: 0px; text-decoration: none;">
-					<img src="assets/images/youtubewhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="docs/assets/images/youtubewhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 				<a href="bandcamp" target="_blank" alt="Bandcamp" style="margin: 0px; text-decoration: none;">
-					<img src="assets/images/bandcampwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="docs/assets/images/bandcampwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
 				</a>
 
 
