--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<h2>NEWS</h2>
 
 			<p id="text">
-			T-shirts are now available over at our <a href="http://memorydeluxempls.bandcamp.com" alt="bandcamp" style="margin: 0px;">bandcamp</a>!<hr>
+			T-shirts are now available over at our <a href="http://memorydeluxempls.bandcamp.com" alt="bandcamp" style="margin: 0px;">bandcamp</a>!
 			</p>
 
 		</div>
