Updated css compatibility

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
 				</audio><br><br>
 
 				<a href="applemusiclink" target="_blank" alt="Apple Music" style="margin: 0px; text-decoration: none;">
-					<img src="docs/assets/images/applemusicwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="docs/assets/images/applemusicwhite.png" class="streaming">
 				</a>
 				<a href="spotifymusiclink" target="_blank" alt="Spotify" style="margin: 0px; text-decoration: none;">
-					<img src="docs/assets/images/spotifywhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="docs/assets/images/spotifywhite.png" class="streaming">
 				</a>
 				<a href="youtube" target="_blank" alt="YouTube" style="margin: 0px; text-decoration: none;">
-					<img src="docs/assets/images/youtubewhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="docs/assets/images/youtubewhite.png" class="streaming">
 				</a>
 				<a href="bandcamp" target="_blank" alt="Bandcamp" style="margin: 0px; text-decoration: none;">
-					<img src="docs/assets/images/bandcampwhite.png" style="width: 5vw; padding: 0px 1vw 0px 1vw;">
+					<img src="docs/assets/images/bandcampwhite.png" class="streaming">
 				</a>
 
 
