--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 		<div>
 			<h2>CONTACT</h2>
 
-			<p id="text">for booking, press, and all other inquiries, please email:<br>
-				<i><b>memorydeluxempls</b></i>[at]<i><b>gmail</b></i>[dot]<b><i>com</b></i></p>
+			<p id="text">for booking, press, and all other inquiries, please email:<br><br>
+				<i><b>memorydeluxempls</b></i><br>[at]<i><b>gmail</b></i>[dot]<b><i>com</b></i></p>
 		</div>
 
 		<footer>
