--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		
 		<meta charset="UTF-8">
   		<meta name="description" content="Memory Deluxe - band website">
-  		<meta name="keywords" content="band, music, minneapolis, post-punk, new wave, post punk, rock, indie, local, diy, synths, synth, synthesizers, synth rock, synth pop, pop, art pop, memory deluxe, memory, deluxe">
+  		<meta name="keywords" content="memory deluxe, band, music, minneapolis, post-punk, new wave, post punk, rock, indie, local, diy, synths, synth, synthesizers, synth rock, synth pop, pop, art pop, memory, deluxe">
   		<meta name="viewport" content="width=device-width, initial-scale=1.0">
   		
   		<!-- Call for stylesheets -->
