--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<h1>MEMORY DELUXE</h1>
 		</div>
 
-		<nav><a href="#news">news</a>    ||    <a href="#stream">stream</a>    ||    <a href="#social">social</a>    ||    <a href="http://memorydeluxempls.bandcamp.com" alt="bandcamp">merch</a>    ||    <a href="#about">about</a>    ||    <a href="#contact">contact</a></nav>
+		<nav><a href="#news">news</a>    ||    <a href="#stream">stream</a>    ||    <a href="#social">social</a>    ||    <a href="https://memorydeluxempls.bandcamp.com" alt="bandcamp">merch</a>    ||    <a href="#about">about</a>    ||    <a href="#contact">contact</a></nav>
 
 		<div class="bioimage">
 			<br>
@@ -44,7 +44,7 @@
 			<h2>NEWS</h2>
 
 			<p id="text">
-			T-shirts are now available over at our <a href="http://memorydeluxempls.bandcamp.com" alt="bandcamp" style="margin: 0px;">bandcamp</a>!
+			T-shirts are now available over at our <a href="https://memorydeluxempls.bandcamp.com" alt="bandcamp" style="margin: 0px;">bandcamp</a>!
 			</p>
 
 		</div>
@@ -102,7 +102,7 @@
 			<h2>SOCIAL</h2>
 
 			<p id="text">
-			<a href="http://instagram.com/memory_deluxe" target="_blank" title="band instagram page">instagram</a><br>
+			<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page">instagram</a><br>
 			</p>
 		</div>
 
