--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
 			<h2>404</h2>
 
 			<p id="text">
-			That url doesn't exist. <a href="index.html">Navigate back to the homepage</a>
+			That url doesn't exist. <a href="index.html">Return to the homepage here</a>.
 			</p>
 
 		</div>
