--- a/404.html
+++ b/404.html
@@ -13,6 +13,8 @@
   		<link rel="stylesheet" media="screen and (orientation: landscape)" href="docs/assets/css/md_desktop.css" />
   		<link rel="stylesheet" media="screen and (orientation: portrait)" href="docs/assets/css/md_mobile.css" />
 
+  		<link rel="shortcut icon" type="image/png" href="favicon.png">
+
   		<base href="https://memorydeluxe.github.io/">
 
 
