Updated index to feature social media icon for IG

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
 					Your browser does not support this embedded audio file. Please click the icon of your preferred streaming service below.
 				</audio><br><br>
 
-				<a href="applemusiclink" target="_blank" alt="Apple Music" style="margin: 0px; text-decoration: none;">
+				<a href="applemusiclink" target="_blank" title="Apple Music" style="margin: 0px; text-decoration: none;">
 					<img src="docs/assets/images/applemusicwhite.png" class="streaming">
 				</a>
-				<a href="spotifymusiclink" target="_blank" alt="Spotify" style="margin: 0px; text-decoration: none;">
+				<a href="spotifymusiclink" target="_blank" title="Spotify" style="margin: 0px; text-decoration: none;">
 					<img src="docs/assets/images/spotifywhite.png" class="streaming">
 				</a>
-				<a href="youtube" target="_blank" alt="YouTube" style="margin: 0px; text-decoration: none;">
+				<a href="youtube" target="_blank" title="YouTube" style="margin: 0px; text-decoration: none;">
 					<img src="docs/assets/images/youtubewhite.png" class="streaming">
 				</a>
-				<a href="bandcamp" target="_blank" alt="Bandcamp" style="margin: 0px; text-decoration: none;">
+				<a href="bandcamp" target="_blank" title="Bandcamp" style="margin: 0px; text-decoration: none;">
 					<img src="docs/assets/images/bandcampwhite.png" class="streaming">
 				</a>
 
@@ -101,9 +101,10 @@
 
 		<div>
 			<h2>SOCIAL</h2>
-
-			<p id="text">
-			<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page">instagram</a><br>
+			<p class="text">
+				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">
+					<img src="docs/assets/images/instagramwhite.png" class="streaming">
+				</a>
 			</p>
 		</div>
 
