--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 		<div>
 			<h2>SOCIAL</h2>
-			<p class="text">
+			<p id="text">
 				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">
 					<img src="docs/assets/images/instagramwhite.png" class="streaming">
 				</a>
