--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<h2>SOCIAL</h2>
 			<p id="text">
 				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">
-					<img src="docs/assets/images/instagramwhite.png" class="streaming">
+					<img src="docs/assets/images/instagramwhite.png" class="streaming">@memory_deluxe
 				</a>
 			</p>
 		</div>
