--- a/index.html
+++ b/index.html
@@ -101,11 +101,18 @@
 
 		<div>
 			<h2>SOCIAL</h2>
-			<p id="text">
-				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">
-					<img src="docs/assets/images/instagramwhite.png" class="streaming">@memory_deluxe
-				</a>
-			</p>
+			<div style="padding: 0px; margin: 0px; width: auto; height: auto; vertical-align: center;">
+				<p id="text">
+					<div style="padding: 0px; margin: 0px; width: auto; height: auto;">
+						<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">
+							<img src="docs/assets/images/instagramwhite.png" class="streaming">
+						</a>
+					</div>
+					<div style="padding: 0px; margin: 0px; width: auto; height: auto;">
+						<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">@memory_deluxe</a>
+					</div>
+				</p>
+			</div>
 		</div>
 
 		<hr class="invisible" id="about">
