--- a/index.html
+++ b/index.html
@@ -101,18 +101,11 @@
 
 		<div>
 			<h2>SOCIAL</h2>
-			<div style="padding: 0px; margin: 0px; width: auto; height: auto; vertical-align: center;">
-				<p id="text">
-					<div style="padding: 0px; margin: 0px; width: auto; height: auto;">
-						<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">
-							<img src="docs/assets/images/instagramwhite.png" class="streaming">
-						</a>
-					</div>
-					<div style="padding: 0px; margin: 0px; width: auto; height: auto;">
-						<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">@memory_deluxe</a>
-					</div>
-				</p>
-			</div>
+			<p id="text">
+				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">
+					<img src="docs/assets/images/instagramwhite.png" class="streaming"></a><br>
+				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">@memory_deluxe</a>
+			</p>
 		</div>
 
 		<hr class="invisible" id="about">
