--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<p id="text">
 				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">
 					<img src="docs/assets/images/instagramwhite.png" class="streaming"></a><br>
-				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page" style="margin: 0px; text-decoration: none;">@memory_deluxe</a>
+				<a href="https://instagram.com/memory_deluxe" target="_blank" title="band instagram page">@memory_deluxe</a>
 			</p>
 		</div>
 
