--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="bioimage">
 			<br>
 
-		<img src="docs/assets/images/CoinLaundryBandPhoto5mb.JPG" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
+		<img src="docs/assets/images/CoinLaundryBandPhoto5mb.jpg" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
 
 		<hr class="invisible" id="news">
 		<br>
