--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<h2>NEWS</h2>
 
 			<p id="text">
-			T-shirts are now available over at our <a href="https://memorydeluxe.bandcamp.com" alt="bandcamp" style="margin: 0px;">bandcamp</a>!<br><br>
+				<a href="https://memorydeluxe.bandcamp.com" alt="bandcamp" style="margin: 0px;">T-shirts are now available over at our bandcamp!</a><br><br>
 			<a href="https://memorydeluxe.bandcamp.com" alt="bandcamp" style="margin: 0px;">Click to buy</a><br>
 				<a href="https://memorydeluxe.bandcamp.com" target="_blank" title="Purchase at bandcamp" style="margin: 0px; text-decoration: none;">
 					<img src="docs/assets/images/tshirt_small.png" class="shirt" alt="T-shirt image">
