Updated bio pic, removed streaming

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="bioimage">
 			<br>
 
-		<img src="docs/assets/images/CoinLaundryBandPhoto5mb.jpg" alt="Band photo - 4 figures in double exposure against a backdrop of a laundromat" title="memory deluxe, circa 2022" class="image">
+		<img src="docs/assets/images/group.png" alt="Band photo - 4 figures in polaroid with star designs" title="memory deluxe, circa 2022" class="image">
 
 		<hr class="invisible" id="news">
 		<br>
@@ -53,6 +53,8 @@
 			</p>
 
 		</div>
+
+<!-- open up once streaming exists
 
 		<hr class="invisible" id="stream">
 
@@ -78,6 +80,7 @@
 					<img src="docs/assets/images/bandcampwhite.png" class="streaming">
 				</a>
 
+-->
 
 				<!--
 
@@ -96,10 +99,11 @@
 
 				-->
 
-
+<!-- open once streaming exists
 			
 			</p>
 		</div>
+-->
 
 		<hr class="invisible" id="social">
 
